--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,16 +3,24 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Tickets</ion-title>
+    <ion-buttons end>
+      <button ion-button color="dark" outline (click)="nuevoTicket()">
+        Nuevo Ticket
+      </button>
+    </ion-buttons>
   </ion-navbar>
-</ion-header>
+</ion-header>    
+  
 
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <ion-content padding>
+    <ion-list>
+      <div class="item item-divider">
+          <h3><pre>{{cabecera}}</pre></h3>
+      </div>
+      <ion-item *ngFor="let ticket of myData" (click)="mostrarTicket(ticket)">
+        {{padLeft(ticket.idticket,5)}} {{ticket.tema}}
+      </ion-item>
+    </ion-list>
+  </ion-content>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
-</ion-content>
